<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/rlPasswordField"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_item_size"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">


        <ImageView
            android:id="@+id/ivIconPassword"
            android:layout_width="@dimen/toolbar_item_size"
            android:layout_height="@dimen/toolbar_item_size"
            android:scaleType="center"
            android:rotation="180"
            android:src="@mipmap/ic_yanzhengma"/>

        <EditText
            android:id="@+id/etPassword"
            style="@style/TextView.H3"
            android:layout_width="match_parent"

            android:layout_height="match_parent"
            android:layout_toRightOf="@id/ivIconPassword"
            android:background="@null"
            android:digits="@string/passFilter"
            android:hint="@string/hint_input_password"
            android:maxLength="12"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/shape_edit_text_cursor" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/bg_pager" />

        <ImageView
            android:id="@+id/ivSwitchVisible"
            android:layout_width="@dimen/toolbar_item_size"
            android:layout_height="@dimen/toolbar_item_size"
            android:layout_alignParentRight="true"
            android:scaleType="center"
            android:src="@mipmap/ic_see" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tvTips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlPasswordField"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="@dimen/half_margin"
        android:text="@string/hint_new_password" />

    <TextView
        android:id="@+id/tvNext"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_item_size"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#dbdbdb"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:textSize="@dimen/standard_text_size_h1" />


</RelativeLayout>