<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/title"
        layout="@layout/layout_mai_title" />


    <RelativeLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_item_size"
        android:layout_below="@+id/title"
        android:animateLayoutChanges="true"
        android:visibility="visible">

        <TextView
            android:id="@+id/search_input_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="@dimen/base_margin"
            android:layout_marginRight="@dimen/base_margin"
            android:layout_marginTop="@dimen/base_margin"
            android:background="@drawable/shape_search_quchu"
            android:gravity="center"
            android:maxLines="1"
            android:paddingLeft="@dimen/base_margin"
            android:paddingRight="@dimen/base_margin"
            android:text="@string/search"
            android:textColor="@android:color/white"
            android:textColorHint="@color/translucent_white"
            android:textSize="@dimen/word_size_body" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title"
        android:layout_above="@+id/rgTab"
        android:background="@color/colorBackground" />

    <RadioGroup
        android:id="@+id/rgTab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/standard_color_white"
        >
        <RadioButton
            android:id="@+id/rbRecommend"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_item_size"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/qu_recommend"
            />
        <RadioButton
            android:id="@+id/rbDiscovery"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_item_size"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/qu_discover"
            />
        <RadioButton
            android:id="@+id/rbMine"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_item_size"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/mine"
            />

    </RadioGroup>

</RelativeLayout>
