<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"

    >

    <TextView
        android:id="@+id/tvCloseAll"
        style="@style/TextView.H1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_item_size"
        android:layout_marginLeft="@dimen/base_margin"
        android:layout_marginRight="@dimen/base_margin"
        android:background="@color/standard_color_h1_dark"
        android:gravity="center"
        android:text="返回首页"
        android:textColor="@color/standard_color_white" />

    <TextView
        android:id="@+id/tvPreOrder"
        style="@style/TextView.H1"
        android:layout_marginTop="@dimen/half_margin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_item_size"
        android:layout_marginLeft="@dimen/base_margin"
        android:layout_marginRight="@dimen/base_margin"
        android:background="@color/standard_color_h1_dark"
        android:gravity="center"
        android:text="@string/pre_order"
        android:textColor="@color/standard_color_white" />

    <TextView
        android:id="@+id/tvShare"
        style="@style/TextView.H1"
        android:layout_marginTop="@dimen/half_margin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_item_size"
        android:layout_marginLeft="@dimen/base_margin"
        android:layout_marginRight="@dimen/base_margin"
        android:background="@color/standard_color_h1_dark"
        android:gravity="center"
        android:text="@string/share"
        android:textColor="@color/standard_color_white" />

    <TextView
        android:id="@+id/tvCancel"
        style="@style/TextView.H1"
        android:layout_marginTop="@dimen/half_margin"
        android:layout_marginBottom="@dimen/half_margin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_item_size"
        android:layout_marginLeft="@dimen/base_margin"
        android:layout_marginRight="@dimen/base_margin"
        android:background="@color/standard_color_h1_dark"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/standard_color_white" />

</LinearLayout>