<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rlUserNameField"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_item_size"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
        <ImageView
            android:id="@+id/ivIconUserName"
            android:layout_width="@dimen/toolbar_item_size"
            android:layout_height="@dimen/toolbar_item_size"
            android:scaleType="center"
            android:src="@mipmap/ic_phone"
            />

        <EditText
            android:id="@+id/etUsername"
            android:layout_toRightOf="@id/ivIconUserName"
            android:layout_toLeftOf="@+id/ivIconClear"
            android:background="@null"
            android:singleLine="true"
            android:gravity="center_vertical"
            android:inputType="number"
            android:maxLength="11"
            style="@style/TextView.H3"
            android:hint="@string/hint_input_cellphone_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <ImageView
            android:id="@+id/ivIconClear"
            android:layout_width="@dimen/toolbar_item_size"
            android:layout_height="@dimen/toolbar_item_size"
            android:scaleType="center"
            android:src="@mipmap/ic_cancel"
            android:layout_alignParentRight="true"
            />
        <View
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlValidCode"
        android:layout_below="@+id/rlUserNameField"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_item_size"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
        <ImageView
            android:id="@+id/ivIconValidCode"
            android:layout_width="@dimen/toolbar_item_size"
            android:layout_height="@dimen/toolbar_item_size"
            android:scaleType="center"
            android:src="@mipmap/ic_yanzhengma"
            />

        <EditText
            android:id="@+id/etValidCode"
            android:layout_toRightOf="@id/ivIconValidCode"
            android:layout_toLeftOf="@+id/tvSendValidCode"
            android:background="@null"
            android:maxLength="6"
            android:inputType="number"
            android:hint="@string/hint_input_validate_code"
            style="@style/TextView.H3"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/tvSendValidCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/half_margin"
            android:gravity="center"
            android:src="@mipmap/ic_launcher"
            android:textSize="@dimen/standard_text_size_h3"
            android:text="@string/send_valid_code"
            android:textColor="@color/standard_color_white"
            android:background="@drawable/shape_lineframe_yellow_fill"
            android:layout_alignParentRight="true"
            />
        <View
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            />

    </RelativeLayout>


    <TextView
        android:layout_alignParentBottom="true"
        android:id="@+id/tvNext"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_item_size"
        android:layout_below="@id/thirdLoginContainer"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        android:textSize="@dimen/standard_text_size_h1"
        android:text="@string/next"/>


    <co.quchu.quchu.widget.ErrorView
        android:id="@+id/errorView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tabLayout"
        android:visibility="gone" />
</RelativeLayout>